--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Meal planification</title>
   </head>
   <body>
-    <div id="app"><!--ssr-outlet--></div>
+    <div id="app"><!--main-app--></div>
     <script type="module" src="/src/entry-client.jsx"></script>
-    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
